--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "gif.js": "^0.2.0",
     "gifuct-js": "^2.1.2",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -23,7 +23,6 @@
     "@types/gif.js": "^0.2.5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
